Use MessageBatch throughout declarative messaging (#10734)